[gd_scene load_steps=15 format=3 uid="uid://ctypoelagijhg"]

[ext_resource type="Script" uid="uid://b17ylte5jgwyv" path="res://scripts/victory_scene.gd" id="1_bv3af"]
[ext_resource type="Script" uid="uid://dwcn6ygouxjjb" path="res://scripts/parallax_background.gd" id="1_e45ws"]
[ext_resource type="Texture2D" uid="uid://doie3dy6gmo1y" path="res://assets/Backgrounds/PNGs/Condesed/Starry background  - Layer 01 - Void.png" id="2_27vcn"]
[ext_resource type="Texture2D" uid="uid://ct3i0di1yplv" path="res://assets/Backgrounds/PNGs/Condesed/Starry background  - Layer 02 - Stars.png" id="3_271ct"]
[ext_resource type="Texture2D" uid="uid://dlurnwrvh3l4h" path="res://assets/Backgrounds/PNGs/Condesed/Starry background  - Layer 03 - Stars.png" id="4_pv0eo"]
[ext_resource type="FontFile" uid="uid://bi7l0mmnx2imk" path="res://assets/fonts/Ethnocentric Rg.otf" id="6_n3rbe"]
[ext_resource type="AudioStream" uid="uid://bwbiam8vg3rvy" path="res://assets/audio/spaceship-whoosh.mp3" id="7_oi1tj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eylik"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yagtn"]
bg_color = Color(0.609329, 0.609331, 0.60933, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1iya"]
bg_color = Color(0.439048, 0.43905, 0.439049, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vqr5t"]
bg_color = Color(0.787759, 0.787759, 0.787759, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Animation" id="Animation_eqkip"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_itiww"]
resource_name = "fade_out"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_27chw"]
_data = {
&"RESET": SubResource("Animation_eqkip"),
&"fade_out": SubResource("Animation_itiww")
}

[node name="victory_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bv3af")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -3.0
offset_right = 222.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_n3rbe")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_eylik")
theme_override_styles/hover = SubResource("StyleBoxFlat_yagtn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f1iya")
theme_override_styles/normal = SubResource("StyleBoxFlat_vqr5t")
text = "MAIN MENU"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)
script = ExtResource("1_e45ws")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(12.5, 162.5)
texture = ExtResource("2_27vcn")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(9.5, 160)
texture = ExtResource("3_271ct")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(8.5, 161)
texture = ExtResource("4_pv0eo")

[node name="Label" type="Label" parent="."]
modulate = Color(0.821789, 0.821789, 0.821789, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -343.0
offset_top = 127.0
offset_right = 343.0
offset_bottom = 176.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("6_n3rbe")
theme_override_font_sizes/font_size = 40
text = "EXPEDITION COMPLETED"

[node name="fade" type="CanvasLayer" parent="."]

[node name="fade_rect" type="ColorRect" parent="fade"]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="fade/fade_rect"]
libraries = {
"": SubResource("AnimationLibrary_27chw")
}

[node name="engine" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_oi1tj")

[node name="button_audio" type="AudioStreamPlayer2D" parent="."]

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
